# nerves_p2p

./: CLAUDE.md  LIBP2P_INTEGRATION.md  Makefile  PARTISAN_SETUP.md  README.md  mix.exs  spec.md  test_libp2p.exs
config/: config.exs  host.exs  runtime.exs  target.exs
lib/: elixir_rpc.ex
lib/elixir_rpc/: application.ex  discovery.ex  libp2p_bridge.ex  mdns_advertiser.ex  partisan_config.ex  peer_manager.ex
lib/elixir_rpc/discovery/: dht_provider.ex  mdns_provider.ex  peer_info.ex  provider.ex
native/p2p_bridge/: Cargo.toml  README.md  build.sh
native/p2p_bridge/.cargo/: config.toml
native/p2p_bridge/src/: behaviour.rs  command_handler.rs  config.rs  event_handler.rs  main.rs  protocol.rs  tui.rs
priv/: p2p_bridge
test/: elixir_rpc_test.exs
